[metadata]
name = xontrib-voxvars
version = 0.0.1
author = Jamie Bliss
author_email = jamie@ivyleav.es
description = dotenv plus vox
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/AstraLuma/xontrib-voxenv
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages =
    xontrib
python_requires = >=3.7
